--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
 
     <header id="header">
-      <img src="logo.png">
+      <img src="2025_Dhruva.Kalyani.jpg" width="500" height="300">
       <h1>Dhruva Kalyani</h1>
       
       <!-- Menu link fragment #id should match a div id. Example: <a href="#home"> links to <div id="home"></div>  -->
